# qiskit

./: Cargo.toml  rust-toolchain.toml  tmp.py
crates/accelerate/src/: lib.rs  sabre_layout.rs
crates/accelerate/src/quantum_circuit/: circuit_data.rs  intern_context.rs
crates/accelerate/src/quantum_info/: mod.rs  two_qubit_decompose.rs
crates/accelerate/src/sabre_swap/: mod.rs  sabre_dag.rs
crates/circuit/: Cargo.toml  build.rs  conanfile.txt
crates/circuit/src/: dag_circuit.rs  dag_node.rs  dot_utils.rs  lib.rs
qiskit/: __init__.py
qiskit/circuit/: quantumcircuit.py
qiskit/dagcircuit/: dagcircuit.py
qiskit/providers/: simulator_backend.py
qiskit/providers/fake_provider/: __init__.py  fake_generic.py  simulator_backend.py
qiskit/providers/utils/: __init__.py  generic_backend.py
qiskit/transpiler/preset_passmanagers/: level0.py  level1.py  level2.py  level3.py
qiskit/utils/: optionals.py
releasenotes/notes/: add-generic-fake-backend-c1434e0c5c413935.yaml
test/python/compiler/: test_transpiler.py
test/python/providers/fake_provider/: test_fake_generic.py
test/python/providers/utils/: __init__.py  test_generic_backend.py
test/python/pulse/: test_macros.py
test/python/quantum_info/: test_accelerate.py
test/python/transpiler/: test_preset_passmanagers.py
test/randomized/: test_transpiler_equivalence.py
