[package]
name = "qiskit-circuit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
build = "build.rs"

[lib]
name = "qiskit_circuit"
doctest = false

[dependencies]
rayon.workspace = true
ahash.workspace = true
rustworkx-core.workspace = true
bytemuck.workspace = true
num-complex.workspace = true
ndarray.workspace = true
numpy.workspace = true
thiserror.workspace = true
approx.workspace = true
itertools.workspace = true

[build-dependencies]
bindgen = "0.65.1"
vcpkg = "0.2.15"

[package.metadata.vcpkg]
git = "https://github.com/kevinhartman/vcpkg"
rev = "qiskit" # TODO: anchor this
dependencies = ["symengine"]

[dependencies.pyo3]
workspace = true
features = ["hashbrown", "indexmap", "num-complex", "num-bigint", "smallvec"]

[dependencies.hashbrown]
workspace = true
features = ["rayon"]

[dependencies.indexmap]
workspace = true
features = ["rayon"]

[dependencies.smallvec]
workspace = true
features = ["union"]

[features]
cache_pygates = []